--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "20"
   }
 }
